--- a/frontend/css/styles/utils.css
+++ b/frontend/css/styles/utils.css
@@ -22,6 +22,18 @@ div.grid-vertical {
     gap: 1rem;
 }
 
+div.flex-horizontal {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+div.flex-vertical {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 div.rounded-borders {
     border-radius: .7rem;
 }
